--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react-dom": "16.8.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-icons": "^3.7.0",
     "react-scripts": "3.0.1",
     "typescript": "3.5.3"
   },
