--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@types/node": "12.6.2",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
+    "@types/react-helmet": "^5.0.8",
     "dayjs": "^1.8.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
     "react-scripts": "3.0.1",
     "typescript": "3.5.3"
